story #15307 refactor(sedalib/resip): improve SEDA version handling
changes:
* pass SEDA version from int to enumeration in sedalib
* add observable SEDA version changes in resip